# TaskTrackingApp

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/src/mytodo/application/: use_cases.py
backend/src/mytodo/config/: settings.py
backend/src/mytodo/core/: entities.py  repository.py
backend/src/mytodo/infrastructure/: db.py  inmemory_repo.py  sql_repo.py
backend/src/mytodo/presentation/: main.py  router.py  schemas.py
backend/tests/unittests/: test_main.py
frontend/: .gitignore  Dockerfile  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/components/: TaskItem.tsx  TaskList.tsx
frontend/lib/: api.ts  hooks.ts  schemas.ts
frontend/tests/: TaskItem.test.tsx
