[project]
name = "mytodo"
version = "0.1.0"
description = "A FastAPI to-do list app (in-memory, clean architecture)"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "sqlalchemy",
    "asyncpg>=0.29.0",
    "alembic"
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
